--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@trpc/client": "11.1.0",
     "@trpc/react-query": "11.1.0",
     "@trpc/server": "11.1.0",
+    "@yornaath/batshit": "^0.10.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "4.1.0",
@@ -63,7 +64,7 @@
     "vinxi": "0.5.4",
     "zod": "3.24.2"
   },
-  "packageManager": "pnpm@10.4.1",
+  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@biomejs/biome",
