--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@moonrepo/cli": "^1.35.0",
     "@tailwindcss/vite": "4.1.3",
     "@testing-library/react": "16.3.0",
     "@types/node": "^22.14.1",
@@ -17,7 +18,6 @@
     "@vitest/coverage-v8": "3.1.1",
     "@vitest/ui": "3.1.1",
     "autoprefixer": "^10.4.21",
-    "drizzle-kit": "^0.30.6",
     "happy-dom": "17.4.4",
     "jotai-devtools": "0.11.0",
     "msw": "2.7.4",
@@ -32,7 +32,6 @@
     "@autoform/react": "3.0.0",
     "@faker-js/faker": "^9.7.0",
     "@hookform/resolvers": "5.0.1",
-    "@libsql/client": "^0.15.3",
     "@radix-ui/react-checkbox": "1.1.5",
     "@radix-ui/react-label": "2.1.3",
     "@radix-ui/react-select": "2.1.7",
@@ -53,13 +52,7 @@
     "clsx": "^2.1.1",
     "date-fns": "4.1.0",
     "dotenv": "^16.5.0",
-    "drizzle-orm": "^0.41.0",
-    "effect": "^3.14.8",
-    "hashids": "^2.3.0",
-    "jotai": "2.12.3",
-    "jotai-mutative": "1.1.0",
     "lucide-react": "^0.488.0",
-    "mutative": "1.1.0",
     "ofetch": "^1.4.1",
     "react": "^19.1.0",
     "react-day-picker": "8.10.1",
@@ -74,6 +67,7 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "@biomejs/biome",
+      "@moonrepo/cli",
       "@parcel/watcher",
       "esbuild",
       "msw"
