--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "clsx": "^2.1.1",
     "date-fns": "4.1.0",
     "dotenv": "^16.5.0",
+    "effect": "^3.14.11",
     "lucide-react": "^0.488.0",
     "ofetch": "^1.4.1",
     "react": "^19.1.0",
@@ -63,7 +64,7 @@
     "vinxi": "0.5.4",
     "zod": "3.24.2"
   },
-  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677",
+  "packageManager": "pnpm@10.4.1",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@biomejs/biome",
