--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "clsx": "^2.1.1",
     "date-fns": "4.1.0",
     "dotenv": "^16.5.0",
+    "effect": "^3.14.12",
     "lucide-react": "^0.488.0",
     "ofetch": "^1.4.1",
     "react": "^19.1.0",
@@ -64,7 +65,7 @@
     "vinxi": "0.5.4",
     "zod": "3.24.2"
   },
-  "packageManager": "pnpm@10.8.1",
+  "packageManager": "pnpm@10.9.0",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@biomejs/biome",
